Minor style changes